# cookiecutter-pypackage

./: cookiecutter.json  justfile  pyproject.toml  zensical.toml
src/cookiecutter_pypackage/: cli.py
tests/: test_bake_project.py  test_justfile.py  test_readme_author.py
{{cookiecutter.pypi_package_name}}/: README.md  justfile  pyproject.toml  zensical.toml
{{cookiecutter.pypi_package_name}}/docs/: installation.md
{{cookiecutter.pypi_package_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  cli.py  context.py  logger.py
{{cookiecutter.pypi_package_name}}/tests/: conftest.py  test_logger.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.pypi_package_name}}/tests/common_fixtures/: parallel_testing.py
